[rewrite] add `UpgradeToJava17`
Signed-off-by: Vincent Potucek <vpotucek@me.com>